--- a/Classif_phases_sinus.ipynb
+++ b/Classif_phases_sinus.ipynb
@@ -685,8 +685,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "9ac97b96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Et la, ca marche ?\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Et la, ca marche ?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6fc439c",
    "metadata": {},
    "outputs": [],
    "source": []
